# jimini-take-home

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: audit.py  auth.py  encounters.py
app/core/: config.py  constants.py  phi_redaction.py  security.py
app/models/: audit.py  encounter.py
app/storage/: __init__.py  in_memory.py
scripts/: generate_password_hash.py  test_api.py
tests/: test_api.py  test_phi_redaction.py  test_storage.py
